# district-tool-data

./: .env  APPLY_UPDATE.md  CLAUDE.md  README.md  pyproject.toml
docs/: API_SHAPE.md  CHARTER.md  DATA_CONVENTIONS.md  FETCH_CHECKLIST.md  TIER1_DATA_PLAN.md
docs/prompts/: first_time_setup.md  ingest_session.md
docs/templates/: meta_template.yaml
src/clean/: _common.py  addresses.py  buildings.py  buildings_solar.py  bwk.py  canopy.py  flood_zones.py  ndvi.py  osm_building_age.py  parcels.py  population.py  roads.py  sectors.py  sectors_demographics.py  terrain.py  trees.py  vegetation.py  vha.py  waterbodies.py
src/data/: SCHEMA.md  catalogue_access.py  loader.py
src/ingest/: _common.py  addresses.py  bwk.py  flood_zones.py  greenspace.py  nmbs_stations.py  noise_maps.py  orthophoto_summer.py  osm_building_age.py  parcels.py  statbel_sectors.py  vha.py  waterbodies.py
src/modules/: solar_irradiance.py
